--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
